@@ -1948,18 +1948,18 @@ name|getDefaultConf
 parameter_list|()
 block|{
 return|return
-name|defaultConfMapping
+name|defaultConf
 operator|!=
 literal|null
 condition|?
-name|defaultConfMapping
+name|defaultConf
 else|:
 operator|(
-name|defaultConf
+name|defaultConfMapping
 operator|!=
 literal|null
 condition|?
-name|defaultConf
+name|defaultConfMapping
 else|:
 name|DEFAULT_CONF_MAPPING
 operator|)
