@@ -5229,6 +5229,252 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testDefaultConfWithDefaultConfMapping
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|XmlModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+name|settings
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"test-defaultconf-withdefaultconfmapping.xml"
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|DependencyDescriptor
+index|[]
+name|dependencies
+init|=
+name|md
+operator|.
+name|getDependencies
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|dependencies
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|dependencies
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+comment|// no conf def => defaults to defaultConf: default
+name|DependencyDescriptor
+name|dd
+init|=
+name|getDependency
+argument_list|(
+name|dependencies
+argument_list|,
+literal|"mymodule1"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|dd
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"myorg"
+argument_list|,
+name|dd
+operator|.
+name|getDependencyId
+argument_list|()
+operator|.
+name|getOrganisation
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"1.0"
+argument_list|,
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"default"
+block|}
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dd
+operator|.
+name|getModuleConfigurations
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"default"
+block|}
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dd
+operator|.
+name|getDependencyConfigurations
+argument_list|(
+literal|"default"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// confs def: *->*
+name|dd
+operator|=
+name|getDependency
+argument_list|(
+name|dependencies
+argument_list|,
+literal|"mymodule2"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|dd
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"myorg"
+argument_list|,
+name|dd
+operator|.
+name|getDependencyId
+argument_list|()
+operator|.
+name|getOrganisation
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"2.0"
+argument_list|,
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"test"
+block|}
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dd
+operator|.
+name|getModuleConfigurations
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"default"
+block|}
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dd
+operator|.
+name|getDependencyConfigurations
+argument_list|(
+literal|"test"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testDefaultConf
 parameter_list|()
 throws|throws
